--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,11 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of cvera is to ...
+---
+
+`cvera` is an R package with a collection of utility R functions that are useful to explore the bTB datasets, primarily `master_tb`.
+
+---
 
 ## Installation
 
@@ -33,24 +37,23 @@ devtools::install_github("044mj/cvera")
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example, eval=FALSE}
+```{r example, eval = FALSE}
 library(cvera)
 ## basic example code
 bd_test <- bd_during(bd_test, "2017-02-27")
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
+```{r reading_in, include = T, warning = FALSE, eval = FALSE}
+library(tidyverse)
+# if using readr::read_csv() they use first 1000 rows to guess type. 
+# If the first 1,000 are missing, it will default to logical. GIF variables are missing in the first 1000
+#because it only came in during May 2019 so include col_types for these variables:
+master_tb <- read_csv("N:\\data\\tb\\master_tb_data_jamie_m\\year_2021\\master_tb_14_Apr_2021.csv", 
+                          col_types = cols(.default = "?", 
+                                           gif8d_actual_date = col_date(), 
+                                           gif_cases = col_number()))
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
 
-You can also embed plots, for example:
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
