--- a/README.Rmd
+++ b/README.Rmd
@@ -61,6 +61,11 @@ cases <- all_cases_per_year(master_tb, drop_years = c(2022))
 
 results in
 
+```{r example_ouput, eval = TRUE}
+cases_example <- readRDS("data/cases_example.rds")
+cases_example
+```
+
 
 
 
