--- a/README.Rmd
+++ b/README.Rmd
@@ -70,12 +70,12 @@ cases_example
 Interactive herd plot:
 
 
-```{r herd_plot_out, eval = F, echo = FALSE}
+```{r herd_plot_out, eval = F, echo = T}
 p <- herd_plot(master_tb, "x1234567") #fake herd
 p
 ```
 
-```{r herdplotfigure, echo = F, eval = T, include=F, warning = F, out.width="100%", out.width="100%", fig.cap = "Herd plot"}
+```{r herdplotfigure, echo = F, eval = T, include=T, warning = F, out.width="100%", out.width="100%", fig.cap = "Herd plot"}
 knitr::include_graphics(paste0(getwd(), "/data/herd_plot_figure.png")) #works in chunk but not when you render
 #knitr::include_graphics(path.expand("~/data/historic_gif_eamonn.png"))
 ```
