gif date name changed

--- a/README.Rmd
+++ b/README.Rmd
@@ -46,8 +46,9 @@ library(tidyverse)
 #because it only came in during May 2019 so include col_types for these variables:
 master_tb <- read_csv("N:/data/tb/master_tb_data_jamie_m/year_2022/master_tb_24_Mar_2022.csv", 
                           col_types = cols(.default = "?", 
-                                           gif8d_actual_date = col_date(), 
-                                           gif_cases = col_number()))
+                                           gif_actual_date = col_date(), 
+                                           gif_cases = col_number(),
+                                           sequence_number = col_character()))
 ```
 
 Using `all_cases_per_year` from `cvera` package:
