--- a/README.Rmd
+++ b/README.Rmd
@@ -88,17 +88,17 @@ knitr::include_graphics("data/herd_plot_figure.png") #works in chunk but not whe
 bd_df <- bd_dataset_fun(master_tb)
 ```
 
-# Check if BD occured during particular years
+## Check if BD occured during particular years
 
 ```{r bd_during_test, eval = F, echo = T}
 bd_df <- bd_during_year(bd_df, years_to_check = c(2005:2006))
 ```
 
-# Helper function to select core variables
+## Helper function to select core variables
 ```{r core_select_test, eval = F, echo = T}
 master_tb %>%
  filter(total_reactor_skin > 10) %>%
- core_vars(county)
+ core_vars()
 ```
 
 
