example add for static plot

--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,7 @@ p
 ```
 
 ```{r herdplotfigure, echo = F, eval = T, include=T, warning = F, error=F, out.width="100%", out.width="100%", fig.cap = "Herd plot"}
-knitr::include_graphics("data/herd_plot_figure.png") #works in chunk but not when you render
+knitr::include_graphics("data/herd_plot_figure_2.png") #works in chunk but not when you render
 #knitr::include_graphics(path.expand("~/data/historic_gif_eamonn.png"))
 ```
 
